# mes-printing-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  db.py  mes.py  models.py  pyproject.toml  requirements.txt  test_database.db
db/: __init__.py  core.py  models.py
docs/: virtual-octo-printer.md
examples/: A.gcode
examples/octo-rest-api/: octo-rest-api.http  resp_cancel_error.json  resp_connect.json  resp_get_job.json  resp_state_heating.json  resp_state_ready.json
examples/prusa-xl/: api.md
octo/: __init__.py  client.py  core.py  models.py
opcua/: __init__.py  client.py  mock.py  objects.py  tests.py  types.py
scripts/: lab-printers.sql
src/: ctx.py  setting.py  task.py
src/app/: __init__.py  dependencies.py  main.py
src/app/routers/: filament.py  jobs.py  orders.py  printer.py  printers.py
src/config/: __init__.py  ctx.py  env.py  loader.py  models.py
src/db/: __init__.py  core.py  filamentModels.py  models.py
src/octo/: __init__.py  core.py  error.py  mock.py
src/opcuax/: __init__.py  client.py  core.py  mock.py  objects.py
src/printer/: __init__.py  core.py  errors.py  models.py
src/printer/mock/: core.py  models.py
src/printer/octo/: core.py  models.py
src/printer/prusa/: core.py  models.py
src/scheduler/: fifo.py
src/service/: __init__.py  db.py  filament.py  job.py  opcua.py  order.py  printer.py
src/worker/: __init__.py  core.py  events.py  extra.py  manager.py  opcua.py  states.py
tests/: __init__.py  config.py  conftest.py  test_db.py  test_setting.py
tests/config/: .env.unittest  app.db  conftest.py  test_env.py  test_loaders.py
tests/octo/mock/: __init__.py  conftest.py  test_cancel.py  test_deleted_file.py  test_print.py
tests/opcua/mock/: conftest.py  test_client.py  test_object.py
tests/opcuax/mock/: conftest.py  test_client.py  test_object.py
tests/orm/: conftest.py  test_order.py  test_user.py
tests/printer/mock/: test_printer.py
tests/service/: test_job_service.py
tests/worker/: conftest.py  dummy_printer.py  test_worker.py
worker/: __init__.py  core.py  helper.py  opcua.py  tests.py  worker.py
