[tool.poetry]
name = "mes-printing-server"
version = "0.1.0"
description = "printing server of the MES system"
authors = ["Jicheng Zhi <jzhi0004@student.monash.edu>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "db", from = "src" },
    { include = "opcuax", from = "src" },
    { include = "printer", from = "src" },
    { include = "worker", from = "src" },
    { include = "app", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
aiohttp = "^3.9.1"
SQLAlchemy = "^2.0.23"
asyncua = "^1.0.6"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.14"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
async-timeout = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.scripts]
#start = "app:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

